--- a/jeu_pendu/style.css
+++ b/jeu_pendu/style.css
@@ -1,7 +1,7 @@
 
 #page {
 	background-color:fcd315;
-	border:1px solid black;
+	border:1px solid grey;
 	text-align:left;
 	width:70%;
 	padding:30px;
@@ -42,6 +42,7 @@ h2 {
 
  #mot p{
 	visibility:hidden;
+	color:white;
 }
 
 #clavier{
